--- a/UnityCsprojNuget/.gitignore
+++ b/UnityCsprojNuget/.gitignore
@@ -73,4 +73,4 @@ InitTestScene*.unity
 
 # End of https://www.toptal.com/developers/gitignore/api/unity
 
-!manifest.json
+![Pp]ackages/manifest.json
