--- a/UnityCsprojNuget.Dummy/UnityCsprojNuget.Dummy.csproj
+++ b/UnityCsprojNuget.Dummy/UnityCsprojNuget.Dummy.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>net471</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup >
+    <PackageReference Include="Microsoft.NETFramework.ReferenceAssemblies" Version="1.0.0" />
+  </ItemGroup>
+
 </Project>
