--- a/UnityCsprojNuget/Assets/UnityCsprojNuget.Editor/package.json
+++ b/UnityCsprojNuget/Assets/UnityCsprojNuget.Editor/package.json
@@ -1,4 +1,10 @@
 {
     "name" : "com.unitycsprojnuget",
-    "version": "1.0.0"
+    "version": "1.0.0",
+    "displayName": "UnityCsprojNuget",
+    "author": {
+        "name": "Kurai András",
+        "email": "k.andras9642@gmail.com",
+        "url": "https://github.com/KuraiAndras/UnityCsprojNuget"
+    }
 }
