--- a/UnityCsprojNuget/Assets/UnityCsprojNuget.Tests/UnityCsprojNuget.Tests.asmdef
+++ b/UnityCsprojNuget/Assets/UnityCsprojNuget.Tests/UnityCsprojNuget.Tests.asmdef
@@ -1,6 +1,21 @@
-﻿{
+{
     "name": "UnityCsprojNuget.Tests",
-    "optionalUnityReferences": [
-        "TestAssemblies"
-    ]
+    "references": [
+        "UnityEngine.TestRunner",
+        "UnityEditor.TestRunner",
+        "UnityCsprojNuget.Editor"
+    ],
+    "includePlatforms": [],
+    "excludePlatforms": [],
+    "allowUnsafeCode": false,
+    "overrideReferences": true,
+    "precompiledReferences": [
+        "nunit.framework.dll"
+    ],
+    "autoReferenced": false,
+    "defineConstraints": [
+        "UNITY_INCLUDE_TESTS"
+    ],
+    "versionDefines": [],
+    "noEngineReferences": false
 }
