--- a/UnityCsprojNuget/.gitignore
+++ b/UnityCsprojNuget/.gitignore
@@ -74,3 +74,4 @@ InitTestScene*.unity
 # End of https://www.toptal.com/developers/gitignore/api/unity
 
 ![Pp]ackages/manifest.json
+![Pp]ackages/packages-lock.json
