--- a/UnityCsprojNuget/Assets/UnityCsprojNuget.Editor/package.json
+++ b/UnityCsprojNuget/Assets/UnityCsprojNuget.Editor/package.json
@@ -1,6 +1,6 @@
 {
-    "name" : "com.unitycsprojnuget",
-    "version": "1.2.0",
+    "name" : "com.kuraiandras.unitycsprojnuget",
+    "version": "2.0.0",
     "displayName": "UnityCsprojNuget",
     "author": {
         "name": "Kurai András",
